# Codility

./: CMakeLists.txt
src/: binaryGap.cpp  cyclicRotation.cpp  frogJump.cpp  frogRiverOne.cpp  oddOccurencesInArray.cpp  permMissElem.cpp  tapeEquilibrium.cpp
